# webserver

./: CMakeLists.txt  color.hpp  error.hpp  ipaddress.hpp  logger.cpp  logger.hpp  main.cpp  messagequeue.cpp  messagequeue.hpp  serializable.cpp  serializable.hpp  socket.cpp  socket.hpp  socketfiledescriptor.hpp  trace.hpp
